<resources>
    <string name="app_welcome_message">Welcome to</string>
    <string name="app_name">My MARTA Adventure</string>
    <string name="app_description_part1">in which Marta takes you on</string>
    <string name="app_description_part2">adventures throughout Atlanta.</string>
    <string name="app_intro_question">Do you wish to start?</string>
    <string name="intro_message">Adventure Time!</string>
    <string name="selection_title_short">Short Stop</string>
    <string name="selection_title_medium">Medium Trip</string>
    <string name="selection_title_long">Long Hike</string>
    <string name="adventure_button">I\'m Done</string>
    <string name="victory_message">Yay! You did it! Congratulations!</string>

</resources>
